compiler/e2e/test/snapshot/borrow_checker/possible_use_of_going_out_of_scope_reference/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the variable doesn't live long enough
   ╭─ compiler/e2e/test/snapshot/borrow_checker/possible_use_of_going_out_of_scope_reference/main.pnx:6:13
   │
 6 │         let inner = 2
   │             ^^^^^ the variable declared here doesn't live long enough
 7 │         if true:
 8 │             ref = &inner
   │                   ------ the borrow starts here
 9 │         
10 │         let copy = *ref
   │                    ---- the borrow is used here

error: Compilation aborted due to 1 error(s)



stdout:
